# langmigrate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.Jules/: palette.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: Gemfile  INTEGRATION.md  _config.yml  index.md
docs/cookbook/: index.md
examples/: README.md
examples/batch_migration/: README.md  demo.py
examples/batch_migration/migrations/: a1c0_add_priority.py  b2d1_normalise_status.py
examples/deep_research_agent/: README.md  demo.py
examples/deep_research_agent/migrations/: a1c0_add_depth.py  b2d1_add_findings.py  c3e2_drop_debug.py
examples/evolving_agent/: README.md  demo.py
examples/evolving_agent/migrations/: a1c0_add_context.py  b2d1_rename_msgs.py
examples/middleware_agent/: README.md  demo.py
examples/middleware_agent/migrations/: a1c0_add_metadata.py  b2d1_add_confidence.py
examples/multi_tool_agent/: README.md  demo.py
examples/multi_tool_agent/migrations/: a1c0_add_session.py  b2d1_add_tool_count.py  c3e2_require_query.py
examples/quickstart/: main.py
examples/quickstart/migrations/: a1c0_add_context.py
examples/studio/: README.md  langgraph.json  pyproject.toml
examples/studio/studio_graphs/: __init__.py  common.py
examples/studio/studio_graphs/agent/: __init__.py  fake_model.py  graph.py
examples/studio/studio_graphs/agent/migrations/: a1c0_add_user_profile.py
examples/studio/studio_graphs/chat/: __init__.py  graph.py
examples/studio/studio_graphs/chat/migrations/: a1c0_add_language.py  b2d1_add_reply_count.py
examples/studio/studio_graphs/memory/: __init__.py  graph.py
examples/studio/studio_graphs/memory/store_migrations/: s1a0_nest_profile.py
src/langmigrate/: __init__.py  config.py  py.typed
src/langmigrate/adapters/: __init__.py  base.py  postgres.py  redis.py
src/langmigrate/cli/: __init__.py  main.py
src/langmigrate/cli/templates/: merge.py.tmpl  revision.py.tmpl  revision_auto.py.tmpl
src/langmigrate/core/: __init__.py  engine.py  exceptions.py  migration.py  operations.py  registry.py  schema.py  topology.py  types.py  version.py
src/langmigrate/integrations/: __init__.py  langchain.py  state.py
src/langmigrate/runtime/: __init__.py  batch.py  factory.py  interceptor.py  persistence.py  store.py
tests/: conftest.py
tests/integration/: test_postgres_e2e.py  test_postgres_store_e2e.py  test_redis_e2e.py
tests/unit/: test_adapters_logic.py  test_batch.py  test_before_after_langmigrate.py  test_bugs.py  test_cli.py  test_cli_autogenerate.py  test_cli_db.py  test_config.py  test_engine.py  test_functional_migration.py  test_integrations_langchain.py  test_integrations_state.py  test_interceptor.py  test_operations.py  test_registry.py  test_schema.py  test_setup.py  test_store_batch.py  test_store_interceptor.py  test_topology.py  test_version.py
