[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langmigrate"
version = "1.1.0"
description = "Declarative schema migrations for LangGraph state persistence (checkpointers and stores)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nabil Chatbi" }]
keywords = [
    "langgraph",
    "langchain",
    "migration",
    "schema-migration",
    "data-migration",
    "checkpoint",
    "checkpointer",
    "store",
    "memory",
    "persistence",
    "schema",
    "alembic",
    "state",
    "agent",
    "pydantic",
    "postgres",
    "redis",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5",
    "typer>=0.12",
    "langgraph-checkpoint>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
postgres = ["langgraph-checkpoint-postgres>=2.0", "psycopg[binary]>=3.1"]
redis = ["langgraph-checkpoint-redis>=0.0.1"]
# Path B (state-level migration via SchemaMigrationMiddleware). The AgentMiddleware
# hooks (before_agent/before_model + async) require the langchain 1.x agents API.
langchain = ["langchain>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "langgraph>=0.2",
]
docs = ["pdoc>=15.0"]

[project.scripts]
langmigrate = "langmigrate.cli.main:app"

[project.urls]
Homepage = "https://github.com/scinfu/langmigrate"
Repository = "https://github.com/scinfu/langmigrate"
Documentation = "https://scinfu.github.io/langmigrate"
Issues = "https://github.com/scinfu/langmigrate/issues"
Changelog = "https://github.com/scinfu/langmigrate/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/langmigrate"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["B008"]  # typer uses callable defaults in argument definitions

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require external services (Postgres and Redis via Docker)",
]
addopts = "-ra -q --strict-markers"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["^tests/", "^examples/"]

[tool.uv]
# uv usa [project.optional-dependencies]; sync con:
#   uv sync --extra dev --extra postgres --extra redis --extra langchain
